--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="site-footer">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-2 offset-1">
                     <h5>Links</h5>
             <ul class="list-unstyled">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="aboutus.html">About</a></li>
                 <li><a href="#">Sites</a></li>
                 <li><a href="contactus.html">Contact</a></li>
